# hammock

./: .gitignore  CMakeLists.txt  LICENSE
benchmarks/include/: Benchmark.h
benchmarks/lib/: CMakeLists.txt  insertions.cpp  main.cpp
cmake/modules/: AddHammock.cmake
include/hammock/: splay-impl.hpp  splay.hpp
include/hammock/impl/: splay.hpp
include/hammock/utils/: direction.hpp  inserter.hpp  iterator.hpp  node.hpp  rotation.hpp  transform.hpp  traversal.hpp  type_traits.hpp
unittests/: CMakeLists.txt
unittests/framework/: CMakeLists.txt
unittests/splay/: CMakeLists.txt  simple.cpp
